# SegundaAvaliacaoFuncional

./: README.md  cabal.sandbox.config  matrix100x20.txt  matriz.hs  multiplication.hs  todo.cabal
.cabal-sandbox/x86_64-linux-ghc-7.10.3-packages.conf.d/: aeson-1.4.0.0-52dd7d4464cbf88a27e0c63c0fa92d18.conf  aeson-pretty-0.8.7-5c879f1cc8569e459234d5e18f793590.conf  ansi-terminal-0.8.0.4-1cbf2026bbe2d2c324c12edc680c6f05.conf  appar-0.1.4-49c6ef6e14982c7422c400172aa14b53.conf  async-2.2.1-6c492efce3e6bc3f901e2e1df93ec28d.conf  attoparsec-0.13.2.2-fbd2b7007151a0fde7cb23f2a08ebffd.conf  auto-update-0.1.4-26185380f9814bfda0946e559c9342a7.conf  base-compat-0.10.4-fd7c920b83cbddc6025e1a64e73dfc0e.conf  base-orphans-0.8-defaaad67ac146817a15564bfa42c759.conf  base64-bytestring-1.0.0.1-7a1d6278262346143ad180321424ea8b.conf  blaze-builder-0.4.1.0-bb288688ffa45edc4a40a3c65e4ab463.conf  blaze-html-0.9.1.1-bb9d84c338eeba66ea20b3bf08ff6476.conf  blaze-markup-0.8.2.1-f673ead17c0cc84427257bde9522402a.conf  bsb-http-chunked-0.0.0.2-046f71b1029daa59ce05f8986dffedd1.conf  byteorder-1.0.4-668610de9ca60d9ba78b7a66682229b4.conf  bytestring-builder-0.10.8.1.0-8aa4073730c676dbe210ea8bffd8d092.conf  case-insensitive-1.2.0.11-a797ffefa93db0928fd8a219ed3b938d.conf  cmdargs-0.10.20-93cf66c0d8a82aaa811f6b75e5a2b2d8.conf  colour-2.3.3-0c4e3735159b357562a94a22fd309019.conf  cookie-0.4.4-2eeb4224ca79f37295b573083dba479f.conf  data-default-class-0.1.2.0-1457d7b306a931ffabee793e4b122dd0.conf  dlist-0.8.0.4-e5a565af2bf268a79a5c3e1b806889d9.conf  (+55 more)
Views/: Home.hs
(+1392 files in other folders)
