name:                todo
version:             0.3.0.1
synopsis:            My awesome todo-list app
homepage:            https://github.com/matheusmaciell/SegundaAvaliacaoFuncional
license:             MIT
author:              Matheus Maciel/ Joao pedro
maintainer:          you@email.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             matriz.hs
  -- other-modules:
  build-depends:       base ==4.8.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , blaze-html
                     , time
